// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCard ProposalCard Renders properly with data 1`] = `
<div>
   
  <a
    class="sc-jHVedQ cdndkM"
    data-testid="proposal-card"
    href="/testUrl"
  >
    <div
      class="sc-jrAFXE sc-gTgzoy jLAWlL etJgsI"
    >
      <div
        class="sc-jrAFXE sc-laRQdt jLAWlL cvOqxf"
      >
        <div
          class="sc-jrAFXE sc-nFqVA jLAWlL iYtQGO"
        >
          <span
            class="sc-kLgnNl eElORm"
          >
            <img
              class="sc-eCstlR sc-jSgvzq ebJAYl bbuZrv"
              data-testid="avatar"
              size="24"
              src="test"
            />
          </span>
          <div
            class="sc-jrAFXE sc-higWrZ jLAWlL jiUNxj"
          >
            test.eth
          </div>
        </div>
        <div
          class="sc-GqePz kqOhzV"
        >
          <div
            class="sc-fWSDcn ePZHeg"
          >
            <div
              class="sc-jrAFXE sc-TmdmN jLAWlL jzZwYz"
            >
              <span
                title="May 9th, 2022 - 8:00 am"
              >
                Time
              </span>
            </div>
            <div
              class="sc-jrAFXE sc-dwfUuu jLAWlL bvOhHt"
            >
               
              Active
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-jrAFXE sc-iNqMzA jLAWlL lbvpvN"
      >
        <h2
          class="sc-pGacB sc-eJMPIT eGiNre ULFaR"
          size="2"
        >
          <strong>
            SWPR single reward campaign
          </strong>
        </h2>
      </div>
      <div
        class="sc-jrAFXE sc-jeGTLq jLAWlL gZqqmD"
      >
        <div
          class="sc-jrAFXE sc-ehSDrC jLAWlL cclvjV"
        />
        <div
          class="sc-jrAFXE sc-fbkiRW jLAWlL gOutAT"
        >
          <div
            class="sc-jrAFXE sc-nFqVA sc-lcuiOb jLAWlL iYtQGO drYbkg"
          >
            <div
              class="sc-jrAFXE sc-higWrZ jLAWlL jiUNxj"
            >
              20
              %
            </div>
            <div
              class="sc-clsFYl cWQCUh"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </div>
            <div
              class="sc-jrAFXE sc-higWrZ jLAWlL jiUNxj"
            >
              10
              %
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
   
</div>
`;

exports[`ProposalCard ProposalCard loading 1`] = `
<div>
   
  <a
    class="sc-jHVedQ cdndkM"
    data-testid="proposal-card"
    href="/"
  >
    <div
      class="sc-jrAFXE sc-gTgzoy jLAWlL etJgsI"
    >
      <div
        class="sc-jrAFXE sc-laRQdt jLAWlL cvOqxf"
      >
        <div
          class="sc-jrAFXE sc-nFqVA jLAWlL iYtQGO"
        >
          <span
            class="sc-kLgnNl eElORm"
          >
            <div
              class="sc-bdfBQB"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 24px; height: 24px; border-radius: 50%; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </span>
          <div
            class="sc-jrAFXE sc-higWrZ jLAWlL jiUNxj"
          >
            <div
              class="sc-bdfBQB"
              style="margin: 0px;"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-GqePz kqOhzV"
        >
          <div
            class="sc-fWSDcn ePZHeg"
          >
            <div
              class="sc-jrAFXE sc-TmdmN jLAWlL jzZwYz"
            >
              <div
                class="sc-bdfBQB"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 50px; --base-color: #333; --highlight-color: #555;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
            <div
              class="sc-bdfBQB"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-jrAFXE sc-iNqMzA jLAWlL lbvpvN"
      >
        <h2
          class="sc-pGacB sc-eJMPIT eGiNre ULFaR"
          size="2"
        >
          <strong>
            <div
              class="sc-bdfBQB"
              style="margin: 0px;"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </strong>
        </h2>
      </div>
      <div
        class="sc-jrAFXE sc-jeGTLq jLAWlL gZqqmD"
      >
        <div
          class="sc-jrAFXE sc-ehSDrC jLAWlL cclvjV"
        />
        <div
          class="sc-bdfBQB"
          style="margin: 0px;"
        >
          <span
            aria-busy="true"
            aria-live="polite"
          >
            <span
              class="react-loading-skeleton"
              style="width: 200px; --base-color: #333; --highlight-color: #555;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </div>
    </div>
  </a>
   
</div>
`;
